# actions

./: README.md  pyproject.toml
.github/workflows/: example.py  script.yml  scripy.yml
tests/: test_actions.py  test_main.py
