[tool.poetry]
name = "actions"
version = "0.1.0"
description = "GIthub action introduction"
authors = ["ggelabert <ggelabert@serikat.es>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flair = "^0.11.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.961"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.1.2"
coverage = "^6.4.2"
autoflake = "^1.4"
pytest-coverage = "^0.0"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
